--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,18 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+    <style>
+      button {
+        border-radius: 4px;
+        background-color: darkgreen;
+        padding: 20px;
+        display: inline-block;
+        border: 0ch;
+        color: whitesmoke;
+        font-weight: bolder;
+      }
+     
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
